--- a/index.html
+++ b/index.html
@@ -75,13 +75,16 @@
                     in Hackathons.
                 </p>
                 <div class="social-icons">
-                    <a class="social-icon" href="https://www.linkedin.com/in/vijaybgautam/"><i
+                    <a class="social-icon" href="https://www.linkedin.com/in/vijaybgautam/" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="https://github.com/GautamVijay"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="https://github.com/GautamVijay" target="_blank"><i
+                            class="fab fa-github"></i></a>
                     <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a> -->
-                    <a class="social-icon" href="https://www.kaggle.com/vijayg13"><i class="fab fa-kaggle"></i></a>
-                    <a class="social-icon" href="https://medium.com/@kgpvijaybg"><i class="fab fa-medium"></i></a>
-                    <a class="social-icon" href="https://www.facebook.com/G.13.VIJAY/"><i
+                    <a class="social-icon" href="https://www.kaggle.com/vijayg13" target="_blank"><i
+                            class="fab fa-kaggle"></i></a>
+                    <a class="social-icon" href="https://medium.com/@kgpvijaybg" target="_blank"><i
+                            class="fab fa-medium"></i></a>
+                    <a class="social-icon" href="https://www.facebook.com/G.13.VIJAY/" target="_blank"><i
                             class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
