--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a>
                 </li>
+
             </ul>
         </div>
     </nav>
@@ -187,7 +188,7 @@
                 <h2 class="mb-5">Education</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Indian Institute of Technology</h3>
+                        <h3 class="mb-0">Indian Institute of Technology Kharagpur</h3>
                         <div class="subheading mb-3">Master of Technology</div>
                         <div>Computer Science</div>
                         <p>CGPA: 7.4</p>
