--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </h1>
                 <div class="subheading mb-5">
                     Ph. No : (+91) 789-7856-709 · EMAIL :
-                    <a href="mailto:name@email.com">kgpvijay@gmail.com</a>
+                    <a href="mailto:kgpvijay@gmail.com">kgpvijay@gmail.com</a>
                 </div>
                 <p class="lead mb-5">
                     <!-- <i class="fa fa-terminal" aria-hidden="true"></i> -->
